--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "firebase-admin": "^13.4.0",
+    "jsonwebtoken": "^9.0.2",
     "micro-method-router": "^0.1.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
