--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "date-fns": "^4.1.0",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
