--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "algoliasearch": "4",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "firebase-admin": "^13.4.0",
