--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "micro-method-router": "^0.1.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "swr": "^2.3.6"
   },
   "scripts": {
     "dev": "next dev",
