--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "algoliasearch": "4",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
-    "firebase-admin": "^13.4.0",
+    "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.8.0",
     "micro-method-router": "^0.1.0",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "22.15.17",
     "@types/react": "19.1.4",
+    "net": "^1.0.2",
     "typescript": "5.8.3"
   }
 }
