--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "22.15.17",
     "@types/react": "19.1.4",
     "@types/styled-components": "^5.1.36",
+    "babel-plugin-styled-components": "^2.1.4",
     "net": "^1.0.2",
     "typescript": "5.8.3"
   }
