--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^17.2.1",
     "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.6.0",
     "mercadopago": "^2.8.0",
     "micro-method-router": "^0.1.0",
     "next": "^15.3.2",
