--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.19",
     "swr": "^2.3.6"
   },
