--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "mercadopago": "^2.8.0",
     "micro-method-router": "^0.1.0",
     "next": "^15.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.19",
     "swr": "^2.3.6"
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "22.15.17",
-    "@types/react": "19.1.4",
+    "@types/react": "^18.2.79",
     "@types/styled-components": "^5.1.36",
     "babel-plugin-styled-components": "^2.1.4",
     "net": "^1.0.2",
